Μετέτρεψα ορισμένα αρχεία σε html. Εφτιαξα τα main environments του ιατρού και του διαχειριστή.

--- a/Ergasia3/src/main/webapp/login.html
+++ b/Ergasia3/src/main/webapp/login.html
@@ -1,6 +1,4 @@
 <!-- This is the sign-up page. Using this page, patients are now able to sign-up to the application. -->
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -166,7 +164,7 @@
             <div class="container" style="background-color:#f1f1f1">
                 <button type="submit">Login</button>
                 <button type="reset" class="cancelbtn">Reset</button>
-                <span class="psw">Don't have an account yet? <a href="index.jsp">register</a></span>
+                <span class="psw">Don't have an account yet? <a href="index.html">register</a></span>
             </div>
 
         </form>
