--- a/Ergasia3/src/main/webapp/index.html
+++ b/Ergasia3/src/main/webapp/index.html
@@ -1,7 +1,5 @@
 <!-- This is the start page of the web application -->
 <!-- source for the html and css code: https://www.geeksforgeeks.org/html-responsive-modal-login-form/ -->
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -192,7 +190,7 @@
             <div class="container" style="background-color:#f1f1f1">
                 <button type="submit">Register</button>
                 <button type="reset" class="cancelbtn">Reset</button>
-                <span class="psw">Already have an account? <a href="login.jsp">login</a></span>
+                <span class="psw">Already have an account? <a href="login.html">login</a></span>
             </div>
 
         </form>
