Made the start page. Η παλιά σελίδα index.html μετανομάστηκε πλέον σε register.html. Η νέα σελίδα index.html είναι το αρχικό μενού της εφαρμογής. Δεν έχω φτιαξει του συνδεσομους ακόμα στα κουμπιά.

--- a/Ergasia3/src/main/webapp/login.html
+++ b/Ergasia3/src/main/webapp/login.html
@@ -164,7 +164,7 @@
             <div class="container" style="background-color:#f1f1f1">
                 <button type="submit">Login</button>
                 <button type="reset" class="cancelbtn">Reset</button>
-                <span class="psw">Don't have an account yet? <a href="index.html">register</a></span>
+                <span class="psw">Don't have an account yet? <a href="register.html">register</a></span>
             </div>
 
         </form>
