--- a/Ergasia3/src/main/webapp/index.html
+++ b/Ergasia3/src/main/webapp/index.html
@@ -1,13 +1,12 @@
 <!-- This is the start page of the web application -->
-<!-- source for the html and css code: https://www.geeksforgeeks.org/html-responsive-modal-login-form/ -->
 <!DOCTYPE html>
 
 <html lang="en">
 
     <head>
 
+        <title>Doctor appointments: Homepage</title>
         <meta charset="utf-8">
-        <title>Doctor appointments: Register</title>
 
         <style>
 
@@ -36,22 +35,10 @@
                 transform: translate(-50%, -50%);
             }
 
-            /* style rules for the inputs boxes in the form */
-            input[type=text],
-            input[type=password]
-            {
-                width: 100%;
-                padding: 12px 20px;
-                margin: 8px 0;
-                display: inline-block;
-                box-sizing: border-box;
-                border:1px solid mediumseagreen;
-            }
-
             /* set a style for the buttons */
             button
             {
-                background-color: mediumseagreen;
+                background-color: #012A6C;
                 color: white;
                 padding: 10px 18px;
                 margin: 8px 0;
@@ -64,14 +51,6 @@
             button:hover
             {
                 opacity: 0.8;
-            }
-
-            /* set extra style for the cancel button */
-            .cancelbtn
-            {
-                width: auto;
-                padding: 10px 18px;
-                background-color: #f44336;
             }
 
             /* centre the display image inside the container */
@@ -88,61 +67,10 @@
                 border-radius: 70%;
             }
 
-            /* set padding to the container class */
+            /* set padding to the container */
             .container
             {
                 padding: 16px;
-            }
-
-            /* set the forgot password text */
-            span.psw
-            {
-                float: right;
-                padding-top: 16px;
-            }
-
-            /* set styles for span and cancel button on small screens */
-            @media screen and (max-width: 300px)
-            {
-                span.psw
-                {
-                    display: block;
-                    float: none;
-                }
-
-                .cancelbtn
-                {
-                    width: 100%;
-                }
-            }
-
-            /* style rules when hyperlinks are pressed */
-            a:visited
-            {
-                color: #012A6C;
-            }
-
-            /* style the hyperlinks in the nav section */
-            a
-            {
-                font-size:16px;
-                color: #012A6C;
-            }
-
-            /* style rules for the error message box */
-            #error_message
-            {
-                background: #fe8b8e;
-                text-align: center;
-                font-size: 16px;
-                transition: all 0.5s ease;
-                width: 97%;
-                margin: 8px 0;
-                display: inline-block;
-                box-sizing: border-box;
-                color: white;
-                font-weight: bold;
-                padding: 0px;
             }
 
         </style>
@@ -151,124 +79,25 @@
 
     <body>
 
-        <form action="patient" method="post" name="signup" onsubmit="return validation()">
-
-            <input type="hidden", value="5", name="patient_action">
+        <form>
 
             <div class="imgcontainer">
                 <img src="img/logo1.png" alt="logo_image" class="avatar">
             </div>
 
-            <center><div id="error_message"></div></center>
+            <br>
 
             <div class="container">
-                <label><b style="color:#012A6C">Hello patient, please create your account!</b></label>
+                <label><b style="color:#012A6C">Welcome to the online doctor's appointment application! <br><br><br> Please select what do you want to do:</b></label>
             </div>
 
             <div class="container">
-
-                <label><b style="color:#012A6C">First name: *</b></label>
-                <input type="text" id="fn" placeholder="Enter your first name" name="fn" required>
-
-                <label><b style="color:#012A6C">Last name: *</b></label>
-                <input type="text" id="ln" placeholder="Enter your last name" name="ln" required>
-
-                <label><b style="color:#012A6C">Username: *</b></label>
-                <input type="text" id="username" placeholder="Enter username" name="username" required>
-
-                <label><b style="color:#012A6C">Password: *</b></label>
-                <input type="password" id="password" placeholder="Enter password" name="password" required>
-
-                <label><b style="color:#012A6C">Age: *</b></label>
-                <input type="text" id="age" placeholder="Enter your age" name="age" required>
-
-                <label><b style="color:#012A6C">AMKA: *</b></label>
-                <input type="text" id="AMKA" placeholder="Enter your AMKA number" name="AMKA" required>
-
-            </div>
-
-            <div class="container" style="background-color:#f1f1f1">
-                <button type="submit">Register</button>
-                <button type="reset" class="cancelbtn">Reset</button>
-                <span class="psw">Already have an account? <a href="login.html">login</a></span>
+                <center><pre><button onclick="window.location.href='login.html'">Login</button>    <button onclick="window.location.href='register.html'">Register</button></pre></center>
             </div>
 
         </form>
 
-        <script>
-
-            // this function is used for form's validation on client's side
-            function validation()
-            {
-                // get the values of inputs that user gave in the form
-                var first_name = document.getElementById("fn").value;
-                var last_name = document.getElementById("ln").value;
-                var username = document.getElementById("username").value;
-                var password = document.getElementById("password").value;
-                var age = document.getElementById("age").value;
-                var AMKA = document.getElementById("AMKA").value;
-                var error_message = document.getElementById("error_message");
-
-                var text; // set a new variable
-
-                // use a new variable for storing the errors during validation
-                error_message.style.padding = "10px";
-
-                // validation check begins
-
-                // check first name
-                if (!/^[A-Z][a-z]+$/.test(first_name))
-                {
-                    text = "First name includes at least two letters and should begin with a capital letter!";
-                    error_message.innerHTML = text;
-                    return false;
-                }
-
-                // check last name
-                if (!/^[A-Z][a-z]+$/.test(last_name))
-                {
-                    text = "Last name includes at least two letters and should begin with a capital letter!";
-                    error_message.innerHTML = text;
-                    return false;
-                }
-
-                // check username
-                if (!/\S/.test(username))
-                {
-                    text = "Username should not consist of only space characters!";
-                    error_message.innerHTML = text;
-                    return false;
-                }
-
-                // check password
-                if (password.length < 4)
-                {
-                    text = "Password consists of at least 4 characters!";
-                    error_message.innerHTML = text;
-                    return false;
-                }
-
-                // check age
-                if (!/^[0-9]+$/.test(age) || age > 119 || age <= 0)
-                {
-                    text = "Age consist of positive integer numbers and is lower than or equal to 119!";
-                    error_message.innerHTML = text;
-                    return false;
-                }
-
-                // check AMKA
-                if (!/^\d{11}$/.test(AMKA))
-                {
-                    text = "AMKA should be a 11-digit number!";
-                    error_message.innerHTML = text;
-                    return false;
-                }
-
-                return true; // everything is fine, no errors occurred
-            }
-
-        </script>
-
+        <br>
     </body>
 
 </html>
