added links to the buttons of the index.html page

--- a/Ergasia3/src/main/webapp/index.html
+++ b/Ergasia3/src/main/webapp/index.html
@@ -35,8 +35,8 @@
                 transform: translate(-50%, -50%);
             }
 
-            /* set a style for the buttons */
-            button
+            /* set a style for the hyperlinks  */
+            a
             {
                 background-color: #012A6C;
                 color: white;
@@ -92,7 +92,7 @@
             </div>
 
             <div class="container">
-                <center><pre><button onclick="window.location.href='login.html'">Login</button>    <button onclick="window.location.href='register.html'">Register</button></pre></center>
+                <center><pre><a href="login.html">Login</a>            <a href="register.html">Register</a></pre></center>
             </div>
 
         </form>
