--- a/Ergasia3/src/main/webapp/login.html
+++ b/Ergasia3/src/main/webapp/login.html
@@ -193,7 +193,7 @@
 
         function DoctorAction()
         {
-            if (document.getElementById("Admin").checked)
+            if (document.getElementById("Doctor").checked)
                 form.action = "doctor";
             //form.setAttribute("action", "doctor");
         }
