--- a/Ergasia3/src/main/webapp/login.html
+++ b/Ergasia3/src/main/webapp/login.html
@@ -144,7 +144,9 @@
 
         <form action="" method="post" name="login" id="login">
 
+            <input type="hidden" name="admin_action" value="1">
             <input type="hidden" name="patient_action" value="6">
+            <input type="hidden" name="doctor_action"  value="1">
 
             <div class="imgcontainer">
                 <img src="img/logo1.png" alt="logo_image" class="avatar">
