Άλλαξα κάτι ψιλοπράγματα

--- a/Ergasia3/src/main/webapp/index.html
+++ b/Ergasia3/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 
     <head>
 
-        <title>Doctor appointments: Homepage</title>
+        <title>Doctor appointments: homepage</title>
         <meta charset="utf-8">
 
         <style>
