--- a/Ergasia3/src/main/webapp/login.html
+++ b/Ergasia3/src/main/webapp/login.html
@@ -5,7 +5,7 @@
 
     <head>
 
-        <title>Doctor appointments: Login</title>
+        <title>Doctor appointments: login</title>
         <meta charset="utf-8">
 
         <style>
