--- a/Ergasia3/src/main/webapp/register.html
+++ b/Ergasia3/src/main/webapp/register.html
@@ -7,7 +7,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Doctor appointments: Register</title>
+        <title>Doctor appointments: register</title>
 
         <style>
 
