Made also some desing in all the pages

--- a/Ergasia3/src/main/webapp/new-patient-success.html
+++ b/Ergasia3/src/main/webapp/new-patient-success.html
@@ -1,4 +1,4 @@
-<!-- This page is appeared when a user successfully registers in the application -->
+<!-- This page is appeared when a patient successfully registers in the application -->
 <!DOCTYPE html>
 
 <html lang="en">
