--- a/Ergasia3/src/main/webapp/new-doctor-success.html
+++ b/Ergasia3/src/main/webapp/new-doctor-success.html
@@ -1,4 +1,4 @@
-<!-- This page is appeared when a user successfully registers in the application -->
+<!-- This page is appeared when a doctor successfully registers in the application -->
 <!DOCTYPE html>
 
 <html lang="en">
