Doctor now works with session
Removed reduntant package imports from jsps and made doctor servlet work with button values

--- a/Ergasia3/src/main/webapp/login.html
+++ b/Ergasia3/src/main/webapp/login.html
@@ -146,7 +146,7 @@
 
             <input type="hidden" name="admin_action" value="login">
             <input type="hidden" name="patient_action" value="6">
-            <input type="hidden" name="doctor_action"  value="1">
+            <input type="hidden" name="doctor_action"  value="login">
 
             <div class="imgcontainer">
                 <img src="img/logo1.png" alt="logo_image" class="avatar">
