--- a/Ergasia3/src/main/webapp/register.html
+++ b/Ergasia3/src/main/webapp/register.html
@@ -190,7 +190,7 @@
             <div class="container" style="background-color:#f1f1f1">
                 <button type="submit">Register</button>
                 <button type="reset" class="cancelbtn">Reset</button>
-                <span class="psw">Already have an account? <a href="login.html">login</a></span>
+                <span class="psw">Already have an account? <a href="login.jsp">login</a></span>
             </div>
 
         </form>
