--- a/Ergasia3/src/main/webapp/fail.html
+++ b/Ergasia3/src/main/webapp/fail.html
@@ -6,7 +6,7 @@
     <head>
 
         <meta charset="utf-8">
-        <meta http-equiv = "refresh" content = "4; url = login.html" />
+        <meta http-equiv = "refresh" content = "4; url = login.jsp" />
         <title>Doctor appointments: failed to login</title>
 
         <style>
