Added users count on register page

--- a/Ergasia3/src/main/webapp/index.html
+++ b/Ergasia3/src/main/webapp/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="container">
-                <center><pre><a href="login.jsp">Login</a>            <a href="register.html">Register</a></pre></center>
+                <center><pre><a href="login.jsp">Login</a>            <a href="register.jsp">Register</a></pre></center>
             </div>
 
         </form>
